--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Website Title</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #444;
+      color: #fff;
+      padding: 0.5rem;
+      text-align: center;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+  </style>
+    <script>
+        // JavaScript code to set the website name and title dynamically
+        document.addEventListener("DOMContentLoaded", function () {
+          const websiteName = "Thomas Campbell";
+          const pageTitle = "Thomas";
+    
+          const websiteNameElement = document.getElementById("websiteName");
+          websiteNameElement.textContent = websiteName;
+    
+          document.title = pageTitle;
+        });
+      </script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <header>
+    <h1 id="websiteName">Loading...</h1>
+  </header>
+
+  <nav>
+    <a href="#">About</a>
+  </nav>
+
+  <main>
+    <h2>This is what I'm gonna do!</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod congue nunc, quis fringilla turpis luctus a. Donec ut urna vel elit tincidunt auctor. Suspendisse egestas purus ut est luctus eleifend.
+    </p>
+  </main>
+
+  <footer>
+    <p>&copy; 20XX *shine*</p>
+  </footer>
 </body>
 </html>
