--- a/index.html
+++ b/index.html
@@ -47,37 +47,27 @@
       text-align: center;
     }
   </style>
-    <script>
-        // JavaScript code to set the website name and title dynamically
-        document.addEventListener("DOMContentLoaded", function () {
-          const websiteName = "Thomas Campbell";
-          const pageTitle = "Thomas";
-    
-          const websiteNameElement = document.getElementById("websiteName");
-          websiteNameElement.textContent = websiteName;
-    
-          document.title = pageTitle;
-        });
-      </script>
 </head>
 <body>
   <header>
-    <h1 id="websiteName">Loading...</h1>
+    <h1>Your Website Name</h1>
   </header>
 
   <nav>
+    <a href="#">Home</a>
     <a href="#">About</a>
+    <a href="#">Contact</a>
   </nav>
 
   <main>
-    <h2>This is what I'm gonna do!</h2>
+    <h2>Welcome to Your Website!</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod congue nunc, quis fringilla turpis luctus a. Donec ut urna vel elit tincidunt auctor. Suspendisse egestas purus ut est luctus eleifend.
     </p>
   </main>
 
   <footer>
-    <p>&copy; 20XX *shine*</p>
+    <p>&copy; 2023 Your Website. All rights reserved.</p>
   </footer>
 </body>
 </html>
